--- a/css/blog.css
+++ b/css/blog.css
@@ -70,6 +70,7 @@
 .article-item .content .b-relation li:before{content:"◈";margin-right:5px;color:#787977}
 .share{margin:30px 0 0 0;text-align:center;font-size:30px}
 .share ul{overflow:hidden;margin:0 auto;display:table}
+.table_tr{border-right: #e1e2e0 solid 2px; border-bottom: #e1e2e0 solid 2px;}
 .share ul::after{clear:both}
 .share ul li{float:left;width:50px;height:50px;box-sizing:border-box;border:2px solid #e8e9e7;border-radius:50%;margin:0 10px;opacity:.75;transition:opacity .36s linear;cursor:pointer;position:relative;text-rendering:auto}
 .share ul li span{display:block;width:100%;height:100%;position:relative}
